<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2014 the original author or authors
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>across-entity-admin-modules</artifactId>
        <groupId>com.foreach.across.modules</groupId>
        <version>${revision}</version>
    </parent>

    <artifactId>experimental-module</artifactId>
    <name>${project.groupId}:${project.artifactId}</name>
    <description>Experimental module</description>

    <properties>
	    <java.version>17</java.version>
        <maven.deploy.skip>false</maven.deploy.skip>
    </properties>

    <dependencies>
	    <dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-validation</artifactId>
	    </dependency>
	    <dependency>
		    <groupId>com.foreach.across</groupId>
		    <artifactId>across-test</artifactId>
		    <scope>test</scope>
		    <exclusions>
			    <exclusion>
				    <groupId>org.junit</groupId>
				    <artifactId>junit</artifactId>
			    </exclusion>
			    <exclusion>
				    <groupId>org.junit.vintage</groupId>
				    <artifactId>junit-vintage-engine</artifactId>
			    </exclusion>
		    </exclusions>
	    </dependency>
        <dependency>
            <groupId>com.foreach.across.modules</groupId>
            <artifactId>admin-web-module</artifactId>
            <version>${revision}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.foreach.across.modules</groupId>
            <artifactId>entity-module</artifactId>
            <version>${revision}</version>
		    <optional>true</optional>
	    </dependency>
	    <dependency>
		    <groupId>com.foreach.across.modules</groupId>
		    <artifactId>across-hibernate-module</artifactId>
		    <optional>true</optional>
	    </dependency>
	    <dependency>
		    <groupId>org.assertj</groupId>
		    <artifactId>assertj-core</artifactId>
		    <scope>test</scope>
	    </dependency>
	    <dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-engine</artifactId>
		    <scope>test</scope>
	    </dependency>
	    <dependency>
		    <groupId>org.mockito</groupId>
		    <artifactId>mockito-junit-jupiter</artifactId>
		    <scope>test</scope>
	    </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            -->
            <plugin>
                <!-- This defines how a specific module will be flattened -->
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.platform</groupId>
                        <artifactId>junit-platform-surefire-provider</artifactId>
                        <version>1.3.2</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
	                <source>1.8</source>
	                <target>1.8</target>
                </configuration>
            </plugin>
            -->
        </plugins>
    </build>


</project>
